# cuLDPC

./: CMakeLists.txt  README.md  requirements.txt
.devcontainer/: devcontainer.json
dockerfiles/: dev_env.dockerfile
include/: code.h  cuda_encoder.h  decoder.h  encoder.h  utils.h
python/tests/: test_code.py  test_encode.py
scripts/: build.sh  build_env.sh  run_tests.sh
src/: code.cpp  decoder.cu  encoder.cpp  encoder.cu  pybind_ldpc.cpp
tests/: CMakeLists.txt  test_code.cpp  test_decoder.cpp  test_encoder.cpp
